--- a/website/spotx-sdk-avplayer/index.html
+++ b/website/spotx-sdk-avplayer/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Ninja | spotx-web-nosdk</title>
-    <meta name="description" content="Release log for spotx-web-nosdk.">
+    <title>Ninja | spotx-sdk-avplayer</title>
+    <meta name="description" content="Release log for spotx-sdk-avplayer.">
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Dosis" rel="stylesheet">
     <link rel="stylesheet" href="../ninja.css">
 </head>
@@ -18,162 +18,162 @@
         </div>
         <div class="rowdiv">
             <div class="box_left clear column_titles_left">
-                spotx-web-nosdk RELEASES
+                spotx-sdk-avplayer RELEASES
             </div>
         </div>
 
 
         <div class="rowdiv">
-            <div class="box_full red redbackgroundlight bold">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight bold">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     2.0.3
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     2.0.2
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     2.0.1
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     2.0.0
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.5.0
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.4.1
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.4.0
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.3.1
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.3.0
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.2.1
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.2.0
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.1.0
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="box_full red redbackgroundlight">
-                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
                     1.0.0
                 </div>
-                <div class="box_left_versionString package_description redborderlight">
+                <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
                         <li>TODO</li>
                     </ul>
